<resources>
    <string name="app_name">Customeasy</string>
    <string name="customeasy">Customeasy</string>
    <string name="logo">Logo</string>
    <string name="customer_id">ID: %1$d</string>
    <string name="customer_name">Name: %1$s</string>
    <string name="customer_address">Address: %1$s</string>
    <string name="customer_phone">Phone: %1$s</string>
    <string name="save">Save</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_name">Enter Name</string>
    <string name="add_customer">Add Customer</string>
    <string name="Name" />
    <string name="Address" />
    <string name="Phone" />
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
</resources>