<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/add_customer"
            android:textColor="#00FFFF"
            android:textSize="26sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/nameInput"
            android:autofillHints="name"
            android:hint="@string/enter_name"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/addressInput"
            android:autofillHints="address"
            android:hint="@string/enter_address"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/phoneInput"
            android:autofillHints="phone"
            android:hint="@string/enter_phone_number"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:padding="12dp"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/saveBtn"
            android:text="@string/save"
            android:background="#FF0000"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
